[package]
name = "fog-net-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = ["aya"]

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", optional = true}
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
networktype = {path = "../networktype"}

[lib]
path = "src/lib.rs"
