[package]
name = "fog-net-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
fog-net-common = { path = "../fog-net-common" }
network-types = "0.0.5"

[features]
default = ["xdp"]
xdp = []
tc = []

[[bin]]
name = "fog-net"
path = "src/main.rs"

[[bin]]
name = "pin-map"
path = "src/pinmap.rs"

[[bin]]
name = "xdp"
path = "src/xdp.rs"

[[bin]]
name = "arp_xdp"
path = "src/arp_xdp.rs"
required-features = ["xdp"]

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
