[package]
name = "fog-net"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
aya-obj = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.1", features = ["derive"] }
fog-net-common = { path = "../fog-net-common", features = ["user"] }
anyhow = "1"
env_logger = "0.11.3"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "fog-net"
path = "src/bin/main.rs"
