[package]
name = "networktype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[features]
std = []

[dependencies]


[dependencies.serde]
version = "1"
features = ["derive"]
optional = true
default-features = false